# realtalk-english

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
apps/api-backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
apps/api-backend/app/: main.py
apps/api-backend/app/common/: error_codes.py  exceptions.py  pagination.py  response.py
apps/api-backend/app/core/: config.py  database.py  deps.py  security.py
apps/api-backend/app/handlers/: achievement.py  ai_quality.py  auth.py  conversation.py  metrics.py  notification.py  recommendation.py  review.py  scenario.py  streak.py  system.py  user_mgmt.py  webhook.py
apps/api-backend/app/middleware/: audit_log.py  auth.py  error_handler.py  rate_limit.py  request_id.py
apps/api-backend/app/migrations/: env.py
apps/api-backend/app/models/: __init__.py  achievement.py  audit_log.py  base.py  conversation.py  conversation_message.py  daily_conversation_count.py  feedback.py  notification.py  permission.py  prompt_template.py  pronunciation_score.py  review_card.py  role.py  scenario.py  scenario_pack.py  scenario_tag.py  subscription.py  system_config.py  user.py  user_role.py  user_streak.py  vocabulary_item.py
apps/api-backend/app/repositories/: achievement_repo.py  audit_log_repo.py  base.py  conversation_repo.py  daily_count_repo.py  notification_repo.py  review_card_repo.py  scenario_repo.py  streak_repo.py  subscription_repo.py  system_config_repo.py  user_repo.py
apps/api-backend/tests/: conftest.py
e2e/: package.json  (+1 more)
(+344 files in other folders)
